platform/search/meilisearch/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meilisearch
  namespace: search
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.mso.lol`)
      kind: Rule
      middlewares:
        - name: chain-api
          namespace: traefik
      services:
        - name: meilisearch
          port: 7700
  tls:
    certResolver: cloudflare
